--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "andres_portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "devDependencies": {
     "vite": "^5.3.3",
     "vite-plugin-restart": "^0.4.1"
   },
   "dependencies": {
+    "@astrojs/vue": "^5.0.11",
+    "astro": "^5.7.5",
     "lil-gui": "^0.19.2",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "vue": "^3.5.13"
   }
 }
